# GarageRay

./: Cargo.toml
pbrt/: Cargo.toml
pbrt/src/: cameras.rs  lights.rs  main.rs  math.rs  shapes.rs
pbrt/src/core/: film.rs  reflection.rs
pbrt/src/integrators/: sample_integrator.rs  whitted_integrator.rs
pbrt/src/shapes/: sphere.rs
simple/: Cargo.toml
simple/src/: camera.rs  hitable.rs  lib.rs  main.rs  material.rs  math.rs  onb.rs  pdf.rs  random.rs  ray.rs  texture.rs
simple/src/hitable/: box_hitable.rs  bvh.rs  constant_medium.rs  flip_normals.rs  hitable_list.rs  rect.rs  sphere.rs  transformations.rs  xy_rect.rs
simple/src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs
simple/src/pdf/: cosine.rs  hitable_pdf.rs  mixture.rs
simple/src/texture/: checker_texture.rs  constant_texture.rs  image_texture.rs  noise_texture.rs
src/: accelerators.rs  core.rs  integrators.rs  lights.rs  main.rs  math.rs  ray.rs  samplers.rs  shapes.rs  spectrum.rs
src/accelerators/: mod.rs
src/cameras/: mod.rs
src/core/: film.rs  interaction.rs  medium.rs  mod.rs  parallel.rs  scene.rs  shape.rs
src/integrators/: sample_integrator.rs  whitted_integrator.rs
src/lights/: mod.rs
src/samplers/: mod.rs
src/shapes/: sphere.rs
vfb/: Cargo.toml
vfb/src/: main.rs
