[package]
name = "garage_ray_simple"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
image = "0.22.3"
rand = "0.7.2"
lazy_static = "1.4.0"

rayon = { version = "1.3.0", optional = true }

[features]
parallel = ["rayon"]