[package]
name = "garage_ray_vfb"
version = "0.1.0"
authors = ["Alekssasho <aleksandar.angelovv@gmail.com>"]
edition = "2018"

[dependencies]
garage_ray_simple = {path = "../simple" }
glium = { version = "0.25", default-features = true }
imgui = "0.2.1"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.1"

[features]
parallel = ["garage_ray_simple/parallel"]
